2.2.2/_sources/gallery/api/watermark_text.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_api_watermark_text.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_api_watermark_text.py:


==============
Text watermark
==============

Use a Text as a watermark




.. image:: /gallery/api/images/sphx_glr_watermark_text_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import numpy as np
    #import matplotlib
    #matplotlib.use('Agg')

    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    fig, ax = plt.subplots()
    ax.plot(np.random.rand(20), '-o', ms=20, lw=2, alpha=0.7, mfc='orange')
    ax.grid()

    # position bottom right
    fig.text(0.95, 0.05, 'Property of MPL',
             fontsize=50, color='gray',
             ha='right', va='bottom', alpha=0.5)

    plt.show()


.. _sphx_glr_download_gallery_api_watermark_text.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: watermark_text.py <watermark_text.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: watermark_text.ipynb <watermark_text.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
